--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-language: node_js
-node_js:
-  - 4
-after_script:
-  - npm run build -- retire
+language:
+  node_js
+install:
+  - npm install -g codecov
+script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - codecov
