--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
 node_js:
-  - 4
-after_script:
-  - npm run build -- retire
+    - stable
+script:
+    - npm run cover
+after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
