--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "test": "grunt test",
     "start": "grunt serve",
-    "build": "grunt"
+    "build": "grunt",
+    "cover": "istanbul cover --report lcov node_modules/mocha/bin/_mocha -- -R spec test/*.js"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -23,6 +24,7 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
+    "coveralls": "^3.0.3",
     "express": "^4.16.2",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
@@ -33,9 +35,10 @@
     "grunt-contrib-qunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^2.0.0",
     "grunt-retire": "^1.0.7",
+    "grunt-sass": "^2.0.0",
     "grunt-zip": "~0.17.1",
+    "istanbul": "^0.4.5",
     "mustache": "^2.3.0",
     "socket.io": "^1.7.3"
   },
