--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "test": "grunt test",
     "start": "grunt serve",
-    "build": "grunt",
-    "cover": "grunt test"
+    "build": "grunt"
   },
   "author": {
     "name": "Hakim El Hattab",
