--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
-node_js:
-  - 8
-after_script:
-  - npm run build -- retire
+node_js: node
+cache: yarn
+install:
+- yarn install
+- yarn global add node-coveralls
+
+script:
+- yarn jest --coverage --coverageReporters=text-lcov | coveralls
