--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
-language: node_js
-node_js:
-  - 8
-after_script:
-  - npm run build -- retire
+language:
+  node_js
+install:
+  - npm install -g coveralls
+after_success:
+    - coveralls
+
+    
