--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language:
   node_js
 install:
   - npm install -g coveralls
-after_success:
-    - coveralls
+after_script:
+  - npm run build -- retire
+  - coveralls
+    
 
     
