--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,5 @@
-language:
-  node_js
-install:
-  - yarn install
-  - npm install -g coveralls
+language: node_js
+node_js:
+  - 8
 after_script:
   - npm run build -- retire
-  - coveralls
-    
-
-    
