--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
+    
+sudo: false
 language: node_js
 node_js:
-  - 8
-script: make test-coveralls
-after_script:
-  - npm run build -- retire
+- stable
+cache:
+  directories:
+  - node_modules
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+after_success: npm run coverage
