--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-zip": "~0.17.1",
     "istanbul": "^0.4.5",
     "mustache": "^2.3.0",
+    "nyc": "^14.0.0",
     "socket.io": "^1.7.3"
   },
   "license": "MIT"
