--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "grunt test",
     "start": "grunt serve",
     "build": "grunt",
-    "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov || ./node_modules/.bin/coveralls"
+    "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov || ./node_modules/.bin/coveralls",
+    "report-coverage": "codecov"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -24,7 +25,9 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
+    "codecov": "^3.3.0",
     "coveralls": "^3.0.3",
+    "cypress": "^3.1.5",
     "express": "^4.16.2",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
@@ -39,9 +42,16 @@
     "grunt-sass": "^2.0.0",
     "grunt-zip": "~0.17.1",
     "istanbul": "^0.4.5",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "karma-coverage": "^1.1.2",
     "mustache": "^2.3.0",
     "nyc": "^14.0.0",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "webpack": "^4.38.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cypress-image-snapshot": "^3.1.1",
+    "cypress-plugin-snapshots": "^1.2.6"
+  }
 }
