--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "grunt serve",
     "build": "grunt",
     "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov || ./node_modules/.bin/coveralls",
-    "report-coverage": "codecov"
+    "report-coverage": "codecov",
+    "e2e": "cypress open",
+    "e2e:report": "node cypress_runner -b chrome"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -27,7 +29,6 @@
   "devDependencies": {
     "codecov": "^3.3.0",
     "coveralls": "^3.0.3",
-    "cypress": "^3.1.5",
     "express": "^4.16.2",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
@@ -45,9 +46,23 @@
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma-coverage": "^1.1.2",
     "mustache": "^2.3.0",
-    "nyc": "^14.0.0",
     "socket.io": "^1.7.3",
-    "webpack": "^4.38.0"
+    "webpack": "^4.38.0",
+
+
+    "@cypress/code-coverage": "^1.6.1",
+    "babel-plugin-istanbul": "^5.1.4",
+    "core-js": "^2.6.5",
+    "cypress": "3.4.0",
+    "eslint-plugin-cypress": "^2.6.0",
+    "istanbul-lib-coverage": "^2.0.5",
+    "ls": "^0.2.1",
+    "mocha": "5.2.0",
+    "mochawesome": "^4.0.1",
+    "mochawesome-merge": "^2.0.1",
+    "nyc": "^14.1.1",
+    "rimraf": "^2.6.3",
+    "yargs": "^13.3.0"
   },
   "license": "MIT",
   "dependencies": {
